# MR-Spectrum

./: .gitignore  .pre-commit-config.yaml  NOTES.txt  README.md  README.rst  TODO.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
Irradiances_ratios/: E_ratio_script.py  irradiance_ratios.py  spectrl2_E_ratio_bench.py  tools.py
Irradiances_ratios/Models/: __init__.py  models_clearness_index_and_airmass_absolute.py  models_relative_am.py  models_relative_am_and_aod500.py
Irradiances_ratios/mismatch/: martin_ruiz.py
Irrads_relation/: E_ratio_script.py  irrads_relation_fracs.py  spectrl2_E_ratio_bench.py  tools_misc.py
Model_comparison/: plot_martin_ruiz_mismatch.py
research/: E_ratio_script.py  __init__.py  plot_martin_ruiz_mismatch.py
research/irradiances_ratios/: __init__.py  ratios_calculator.py  test_ratios_calculator.py
research/irradiances_ratios/models/: __init__.py
research/irradiances_ratios/ratios_generators/: spectrl2_E_ratio_bench.py
research/irradiances_ratios/simulators/: __init__.py  spectrl2_E_ratio_bench.py
research/model_comparison/: fitted_model_funcs.py
research/pvlib_ports/: __init__.py
research/tests/: conftest.py  test_conftest.py  test_pvlib_ports.py  test_ratios_calculator.py
research/utils/: __init__.py  tools.py
research_src/: __init__.py
research_src/irradiances_ratios/: __init__.py  ratios_calculator.py
research_src/model_comparison/: fitted_model_funcs.py
research_src/tests/: test_ratios_calculator.py
scripts/: E_ratio_script.py  plot_martin_ruiz_mismatch.py
utils/: tools.py
(+4 files in other folders)
